	  pluggible options can set the flag, too.

	* business-options: (new files) implement owner/customer/vendor
	  options to plug into the options dialog.
	* businessmod-gnome: initialize business options
	* business-utils: pack into box FALSE, not TRUE
	* owner-report: put the company into the options dialog instead of
	  hiding it.
	
2002-07-03  Derek Atkins  <derek@ihtfp.com>

	* moved receivable and payable aging reports to business-reports;
	added "links" to the company, invoices, and company-report.
	Create a "Business Reports" menu item under "Reports" and put the
	business reports there.  This required a new startup hook to allow
	dynamic creation of the Report Menu.  Change the aging reports to
	use Invoices and Lots instead of the transaction description to
	differentiate actual companies.

	* dialog-invoice: publish the function to open a company-report

	* business-urls: hooks into gnc-html for business objects.
	Initialize at module load-time.  wrap the business url types.

	* business-core: create gnc:owner-from-split which is used by a
	bunch of the business reports.  wrap gncOwnerCopy().

	* fix the "Create Test Data" extension
	
2002-07-03  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/druid-hierarchy.c (gnc_get_ea_locale_dir): If current
	locale doesn't work for account hierarchy druid, then check all
	abbreviated versions of that locale.

2002-07-02  Derek Atkins  <derek@ihtfp.com>

	* register/register-gnome/gnucash-sheet.c: allow a caller to
	"unset" the popup menu by passing a NULL popup.

	* business/business-gnome/dialog-invoice.c: use glade for the
	popup.  Only set the popup for Read-Write invoices.
	* business/business-gnome/glade/invoice.glade: define the popup
	menu in glade.

	* add a menubar to the Invoice Window in glade

	* fill out the Invoice Window Menu, based upon the Register
	Window.  Fill in the callbacks required to get the menu to work.

	* Create a hook into the "owner-report" and link that into the